# NoodleRT

./: CMakeLists.txt  README.md  cornellbox.xml  main.cpp  newcornellbox.xml  object.cpp  perspective.cpp  smallpt.xml  test.xml  testbunny.xml  testbunnynew.xml  testlight.xml  testnewScene.xml  testobj.xml  testspot.xml  twospheres.xml  whittedcornellbox.xml  whittedraytracing.xml
inc/: camera.h  object.h
inc/base/: Aggregate.h  aggregate.h  bsdf.h  bxdf.h  camera.h  emitter.h  film.h  integrator.h  light.h  material.h  mesh.h  object.h  primitive.h  sampler.h  shape.h  texture.h
inc/core/: application.h  common.h  interaction.h  math.h  object.h  propertylist.h  record.h  renderer.h  scene.h
inc/math/: bound.h  color.h  constant.h  interval.h  ray.h  rng.h  scattering.h  transform.h  vec.h
inc/util/: bitmap.h  frame.h  parallel.h  parser.h  sampling.h  threadpool.h  timer.h
res/cornellbox/: cornellbox.xml
res/materialball/: materialball.xml
res/test/: bunny.xml  newcornellbox.xml  spheres.xml
src/: application.cpp  bitmap.cpp  interaction.cpp  main.cpp  mesh.cpp  object.cpp  parallel.cpp  parser.cpp  perspective.cpp  propertylist.cpp  record.cpp  renderer.cpp  scene.cpp  sphere.cpp
src/aggregate/: Naive.cpp  aggregate.cpp  bvh.cpp  naive.cpp
src/bsdf/: conductor.cpp  dielectric.cpp  diffuse.cpp  plastic.cpp  roughdiffuse.cpp
src/bxdf/: conductor.cpp  dielectric.cpp  diffuse.cpp  lambert.cpp  metal.cpp  plastic.cpp  reflection.cpp  roughdiffuse.cpp  specular.cpp  transmission.cpp
src/camera/: camera.cpp  orthographic.cpp  perspective.cpp
src/core/: application.cpp  object.cpp  propertylist.cpp  scene.cpp
src/emitter/: area.cpp  environment.cpp  point.cpp
src/film/: film.cpp
src/integrator/: direct.cpp  directlight.cpp  integrator.cpp  normal.cpp  path.cpp  randomwalk.cpp  whitted.cpp
src/light/: area.cpp  infinite.cpp  point.cpp
src/primitive/: geometry.cpp
src/sampler/: independent.cpp
src/shape/: cube.cpp  mesh.cpp  (+6 more)
tests/: main_test.cpp  property_test.cpp
(+7 files in other folders)
